// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests that device sizes render appropriately tests that extra large devices render correctly: extralarge 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "purple",
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "orange",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "white",
        },
        Array [
          Object {
            "color": "black",
          },
          Object {
            "fontSize": 30,
          },
        ],
      ]
    }
  >
    Device Size: 
    extralarge
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "white",
        },
        Array [
          Object {
            "color": "black",
          },
          Object {
            "fontSize": 30,
          },
        ],
      ]
    }
  >
    Color: 
    orange
  </Text>
</View>
`;

exports[`tests that device sizes render appropriately tests that extra small devices render correctly: extrasmall 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "purple",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "white",
        },
        Object {
          "fontSize": 20,
        },
      ]
    }
  >
    Device Size: 
    extrasmall
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "white",
        },
        Object {
          "fontSize": 20,
        },
      ]
    }
  >
    Color: 
    purple
  </Text>
</View>
`;

exports[`tests that device sizes render appropriately tests that large devices render correctly: large 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "purple",
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "blue",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "white",
        },
        Object {
          "fontSize": 30,
        },
      ]
    }
  >
    Device Size: 
    large
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "white",
        },
        Object {
          "fontSize": 30,
        },
      ]
    }
  >
    Color: 
    blue
  </Text>
</View>
`;

exports[`tests that device sizes render appropriately tests that medium devices render correctly: medium 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "purple",
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "green",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "white",
        },
        Object {
          "fontSize": 20,
        },
      ]
    }
  >
    Device Size: 
    medium
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "white",
        },
        Object {
          "fontSize": 20,
        },
      ]
    }
  >
    Color: 
    green
  </Text>
</View>
`;

exports[`tests that device sizes render appropriately tests that small devices render correctly: small 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "purple",
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "white",
        },
        Object {
          "fontSize": 20,
        },
      ]
    }
  >
    Device Size: 
    small
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "white",
        },
        Object {
          "fontSize": 20,
        },
      ]
    }
  >
    Color: 
    red
  </Text>
</View>
`;
